# simscrape

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
output/abc/: abc_business_4_20250215_130531.md  abc_entertainment_8_20250215_130531.md  abc_environment_10_20250215_130531.md  abc_health_7_20250215_130531.md  abc_indigenous_9_20250215_130531.md  abc_justin_11_20250215_130531.md  abc_news_1_20250215_130531.md  abc_politics_3_20250215_130531.md  abc_science_6_20250215_130531.md  abc_technology_5_20250215_130531.md  abc_world_2_20250215_130531.md
simscrape/common/: crawler.py  filename.py  markdown.py  sitemap.py
simscrape/modules/base/: base.py
simscrape/modules/basecrawler/: base.py
simscrape/modules/newsagent/: processor.py
simscrape/modules/pdfvector/: __init__.py  processor.py  query.py
simscrape/modules/webdiff/: diff.py
