[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crawl4ai"
version = "0.1.0"
description = "A web crawler for AI applications"
requires-python = ">=3.7"
dependencies = [
    "aiohttp",
    "beautifulsoup4",
    "pydantic",
    "requests",
    "crawl4ai",
    "crawl4ai-utils",
    "crawl4ai-openai",
    "openai"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]

[tool.pylint.format]
max-line-length = 120 